Fixed item align in firefox

--- a/style.css
+++ b/style.css
@@ -130,8 +130,8 @@ li {
 
 #featured {
     background-color: var(--bg-dark-color);
-    justify-items: center;
     color: white;
+    text-align: center;
 }
 
 #featured .heading {
@@ -302,7 +302,6 @@ footer p {
         background-color: #2946a3;
     }
 
-    /* Остальные стили для мобильной версии остаются без изменений */
     .logo {
         font-size: clamp(20px, 5vw, 28px);
     }
@@ -345,7 +344,6 @@ footer p {
 
 @media (max-width: 350px) {
     nav {
-        width: min(280px, 90vw);
         padding: 70px 20px 25px;
     }
 
@@ -380,7 +378,6 @@ footer p {
     }
 
     nav {
-        width: min(350px, 75vw);
         padding: 90px 35px 35px;
     }
 
